tests/miniJava/neg/004877_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java class java { public static void Main ( String [ ] java ) { { } } } int [] java ) { return 0 ; } }
